--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <section class="about sect">
                     <h3 class="right-title">Projects</h3>
                     <h4>Github</h4>
-                    <p class="para">Portfolio Projects have worked on <a href="www.github.com/p-macks">www.github.com/p-macks</a>
+                    <p class="para">Portfolio Projects have worked on <a href="https://github.com/p-macks?tab=repositories">www.github.com/p-macks</a>
                     </p><br>
                     <h4>Personal Projects</h4>
                     <p class="para">At MacksWebSolutions designed mostly static websites for companies and individuals using mostly HTML,CSS,Javascript and Bootstrap. These include 
