--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </p><br>
                     <h4>Personal Projects</h4>
                     <p class="para">At MacksWebSolutions designed mostly static websites for companies and individuals using mostly HTML,CSS,Javascript and Bootstrap. These include 
-                        <a href="www.solargenectrical.co.za">www.solargenectrical.co.za</a>ad <a href="www.urbandrop.co.za">www.urbandrop.co.za</a> to list but a few 
+                        <a href="www.solargenectrical.co.za">www.solargenectrical.co.za</a> and <a href="www.urbandrop.co.za">www.urbandrop.co.za</a> to list but a few 
                     </p>
                 </section>
             </div>
